[tool.poetry]
name = "asyncpipe"
version = "0.1.0"
description = ""
authors = ["Marek Pavelka <marek.pavelka@datamole.cz>"]

packages = [
    { include = "asyncpipe" },
]


[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "0.7.0"
psutil = "5.8.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
